--- a/무한 롤링 이미지 배너/무한 롤링 이미지 배너.html
+++ b/무한 롤링 이미지 배너/무한 롤링 이미지 배너.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./rolling.js"></script>
     <title>Document</title>
     <style>
-        
+        .wrap_center {
+            width: 100%;
+            height: 600px;
+        }
+        .container {
+            margin: 0 auto;
+            width: 600px;
+            height: 600px;
+            overflow: hidden;
+        }
+        .img_wrap {
+            width: 600px;
+            height: 600px;
+            position: absolute;
+            overflow: hidden;
+        }
+        .rollimgs {
+            padding: 0;
+            margin: 0;
+        }
+        .rollimgs div {
+            position: absolute;
+            width: 600px;
+            height: 600px;
+            left: 600px;
+        }
+        .rollimgs div img {
+            width: 100%;
+            height: 100%;
+        }
+        .rollimgs div.currentroll {
+            left: 0;
+            transition: left .5s ease-in-out, right .5s ease-in-out;
+        }
+        .rollimgs div.prevroll {
+            left: -600px;
+            transition: left .5s ease-in-out, right .5s ease-in-out;
+        }
+        .rollimgs.reverse div.prevroll {
+            transition: none;
+        }
+        .rollimgs div.nextroll {
+            left: 600px;
+            display: block;
+            transition: none;
+        }
+        .rollimgs.reverse div.nextroll{
+            transition: left .5s ease-in-out, right .5s ease-in-out;
+        }
     </style>
 </head>
 <body>
@@ -14,9 +63,9 @@
         <div class="container">
             <div class="img_wrap">
                 <div class="rollimgs">
-                    <img src="./img/1.png">
-                    <img src="./img/2.png">
-                    <img src="./img/3.png">
+                    <div><img src="./img/1.png"></div>
+                    <div><img src="./img/2.png"></div>
+                    <div><img src="./img/3.png"></div>
                 </div>
             </div>
         </div>
